# ckb-vm-on-sp1

./: .gitmodules  README.md
.cursor/commands/: optimize-ckb-vm.md
.cursor/rules/: build-and-test.mdc
.github/workflows/: prove.yml
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml  README.md
program/src/: k256_ecdsa_ckbvm  main.rs  secp256k1_ecdsa_ckbvm
script/: Cargo.toml
script/binaries/: k256_ecdsa_sp1
