[package]
version = "0.1.0"
name = "ckb-vm-interpreter-script"
edition = "2021"
default-run = "ckb-vm-interpreter"

[[bin]]
name = "ckb-vm-interpreter"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
sp1-core-executor = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
sp1-hypercube = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
ckb-vm-interpreter-lib = { path = "../lib" }
dotenv = "0.15.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
sp1-build = { git = "https://github.com/succinctlabs/sp1", tag = "v6.0.0-beta.1" }
